--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,44 +1,30 @@
 {
   "name": "@artivism/ui",
   "version": "0.1.0",
-  "description": "React UI components for Artivism Design System",
   "main": "./dist/index.mjs",
   "types": "./dist/index.d.mts",
   "exports": {
     ".": "./dist/index.mjs",
     "./button": "./dist/button.mjs",
-    "./card": "./dist/card.mjs"
+    "./card": "./dist/card.mjs",
+    "./input": "./dist/input.mjs",
+    "./badge": "./dist/badge.mjs"
   },
   "files": [
     "dist"
   ],
-  "peerDependencies": {
-    "react": "^18.0.0"
-  },
   "scripts": {
     "build": "tsup",
     "dev": "tsup --watch",
     "typecheck": "tsc --noEmit"
   },
+  "peerDependencies": {
+    "react": "^18.0.0"
+  },
   "devDependencies": {
-    "@types/react": "^18.2.48",
-    "react": "^18.2.0",
-    "tsup": "^8.0.1",
-    "typescript": "^5.3.3"
-  },
-  "keywords": [
-    "design-system",
-    "react",
-    "components",
-    "ui",
-    "artivism"
-  ],
-  "author": "artivism",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/artivism/design-system.git",
-    "directory": "packages/ui"
-  },
-  "homepage": "https://design.artivism.it"
+    "@types/react": "^18.3.27",
+    "react": "^18.3.1",
+    "tsup": "^8.5.1",
+    "typescript": "^5.9.3"
+  }
 }
